Search by name, state_number, vin_code + docs
