# app/Http/Controllers/API/v1/VehiclesController.php
@@ -8,6 +8,7 @@ use App\Http\Resources\v1\VehicleCollection;
 use App\Http\Resources\v1\VehicleResource;
 use App\Models\Vehicle;
 use App\Services\VehicleService;
+use Illuminate\Database\Eloquent\Builder;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Http\Resources\Json\ResourceCollection;
@@ -26,7 +27,15 @@ class VehiclesController extends Controller
      */
     public function index(Request $request): ResourceCollection
     {
-        $vehicles = Vehicle::query()->filtered($request)->sorted($request);
+
+        if ($request->filled('search')){
+            $vehicles = Vehicle::search($request->search)
+                ->query(function (Builder $query) use ($request) {
+                    $query->filtered($request)->sorted($request);
+                });
+        }else{
+            $vehicles = Vehicle::query()->filtered($request)->sorted($request);
+        }
 
         $vehicles = $vehicles->paginate(10)->withQueryString();
 
